force-app/main/default/objects/DOF_Vital_Record__c/DOF_Vital_Record__c.object-meta.xml
<CustomObject>
    <label>Vital Record</label>
    <nameField>
        <displayFormat>VR-{00000}</displayFormat>
        <label>Vital Records Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vital Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>