force-app/main/default/objects/DOF_Vital_Record__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Vital Records</relationshipLabel>
    <relationshipName>Vital_Records</relationshipName>
    <type>Lookup</type>
</CustomField>