force-app/main/default/objects/DOF_Vital_Record__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birth_Certificate</fullName>
                <label>Birth Certificate</label>
            </value>
            <value>
                <fullName>Death_Certificate</fullName>
                <label>Death Certificate</label>
            </value>
            <value>
                <fullName>Establishment_of_Paternity</fullName>
                <label>Establishment of Paternity</label>
            </value>
            <value>
                <fullName>Marriage_Certificate</fullName>
                <label>Marriage Certificate</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>